separate height and weight charts

--- a/index.html
+++ b/index.html
@@ -3,29 +3,164 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMART on FHIR App</title>
+    <title>SMART on FHIR App - Patient Growth Charts</title>
     <script src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@1.0.0/dist/chartjs-adapter-moment.min.js"></script>
+    <style>
+        .chart-container {
+            width: 80%;
+            margin: 20px auto;
+        }
+    </style>
 </head>
 <body>
-<h1>SMART on FHIR App</h1>
+<h1>Patient Growth Charts</h1>
 <div id="patient-info"></div>
+<div id="error-info" style="color: red;"></div>
+<div class="chart-container">
+    <canvas id="heightChart"></canvas>
+</div>
+<div class="chart-container">
+    <canvas id="weightChart"></canvas>
+</div>
 
 <script>
+    const patientInfo = document.getElementById('patient-info');
+    const errorInfo = document.getElementById('error-info');
+
     FHIR.oauth2.ready()
         .then(client => {
-            client.patient.read().then(
-                patient => {
-                    const patientInfo = document.getElementById('patient-info');
-                    patientInfo.innerHTML = `
-                            <h2>Patient Information</h2>
-                            <p>Name: ${patient.name[0].given.join(' ')} ${patient.name[0].family}</p>
-                            <p>Gender: ${patient.gender}</p>
-                            <p>Birth Date: ${patient.birthDate}</p>
-                        `;
-                }
-            );
+            console.log("FHIR client initialized:", client);
+            return Promise.all([
+                client.patient.read(),
+                client.request(`Observation?patient=${client.patient.id}&code=http://loinc.org|8302-2,http://loinc.org|29463-7&_sort=date`)
+            ]);
         })
-        .catch(console.error);
+        .then(([patient, observations]) => {
+            console.log("Patient data received:", patient);
+            console.log("Observations received:", observations);
+
+            patientInfo.innerHTML = `
+                    <h2>Patient Information</h2>
+                    <p>Name: ${patient.name[0].given.join(' ')} ${patient.name[0].family}</p>
+                    <p>Gender: ${patient.gender}</p>
+                    <p>Birth Date: ${patient.birthDate}</p>
+                `;
+
+            const heightData = [];
+            const weightData = [];
+
+            observations.entry.forEach(entry => {
+                const resource = entry.resource;
+                const date = moment(resource.effectiveDateTime);
+                const value = resource.valueQuantity.value;
+                const code = resource.code.coding[0].code;
+
+                if (code === '8302-2') { // Height
+                    heightData.push({x: date, y: value});
+                } else if (code === '29463-7') { // Weight
+                    weightData.push({x: date, y: value});
+                }
+            });
+
+            createHeightChart(heightData);
+            createWeightChart(weightData);
+        })
+        .catch(error => {
+            console.error("Error occurred:", error);
+            errorInfo.innerHTML = `<p>Error: ${error.message}</p>`;
+            if (error.stack) {
+                errorInfo.innerHTML += `<pre>${error.stack}</pre>`;
+            }
+        });
+
+    function createHeightChart(heightData) {
+        const ctx = document.getElementById('heightChart').getContext('2d');
+        new Chart(ctx, {
+            type: 'line',
+            data: {
+                datasets: [{
+                    label: 'Height (cm)',
+                    data: heightData,
+                    borderColor: 'rgb(75, 192, 192)',
+                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                    fill: true
+                }]
+            },
+            options: {
+                responsive: true,
+                plugins: {
+                    title: {
+                        display: true,
+                        text: 'Patient Height Over Time'
+                    }
+                },
+                scales: {
+                    x: {
+                        type: 'time',
+                        time: {
+                            unit: 'month'
+                        },
+                        title: {
+                            display: true,
+                            text: 'Date'
+                        }
+                    },
+                    y: {
+                        title: {
+                            display: true,
+                            text: 'Height (cm)'
+                        }
+                    }
+                }
+            }
+        });
+    }
+
+    function createWeightChart(weightData) {
+        const ctx = document.getElementById('weightChart').getContext('2d');
+        new Chart(ctx, {
+            type: 'line',
+            data: {
+                datasets: [{
+                    label: 'Weight (kg)',
+                    data: weightData,
+                    borderColor: 'rgb(255, 99, 132)',
+                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                    fill: true
+                }]
+            },
+            options: {
+                responsive: true,
+                plugins: {
+                    title: {
+                        display: true,
+                        text: 'Patient Weight Over Time'
+                    }
+                },
+                scales: {
+                    x: {
+                        type: 'time',
+                        time: {
+                            unit: 'month'
+                        },
+                        title: {
+                            display: true,
+                            text: 'Date'
+                        }
+                    },
+                    y: {
+                        title: {
+                            display: true,
+                            text: 'Weight (kg)'
+                        }
+                    }
+                }
+            }
+        });
+    }
 </script>
 </body>
 </html>
