--- a/launch.html
+++ b/launch.html
@@ -10,11 +10,10 @@
 <h1>Launching SMART on FHIR App</h1>
 <script>
   FHIR.oauth2.authorize({
-    clientId: 'SmartLiver',
+    clientId: '7fd6d8c2-fecb-4256-92ef-e5e0f64cf030',
     scope: 'launch/patient patient/*.read',
     redirectUri: 'index.html',
-    iss: 'https://r4.smarthealthit.org',
-    completeInTarget: true
+    iss: 'https://fhir-open.cerner.com/r4/ec2458f2-1e24-41c8-b71b-0e701af7583d',
   });
 </script>
 </body>
