--- a/index.html
+++ b/index.html
@@ -6,29 +6,63 @@
     <title>SMART on FHIR App - Patient Growth Charts</title>
     <script src="https://cdn.jsdelivr.net/npm/fhirclient/build/fhir-client.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@1.0.0/dist/chartjs-adapter-moment.min.js"></script>
     <style>
-        .chart-container {
-            width: 80%;
-            margin: 20px auto;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 100%;
+            margin: 0 auto;
+        }
+        h1 {
+            text-align: center;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            padding: 10px;
+            border: 1px solid #ddd;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        .notification {
+            color: blue;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-<h1>Patient Growth Charts</h1>
-<div id="patient-info"></div>
-<div id="error-info" style="color: red;"></div>
-<div class="chart-container">
-    <canvas id="heightChart"></canvas>
-</div>
-<div class="chart-container">
-    <canvas id="weightChart"></canvas>
+<div class="container">
+    <h1>Patient Growth Charts</h1>
+    <div id="patient-info"></div>
+    <div id="error-info" style="color: red;"></div>
+    <table id="patient-table">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>MRN</th>
+                <th>Labs</th>
+                <th>Visit Reason</th>
+                <th>Recent Visit</th>
+                <th>Patient Communication</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 </div>
 
 <script>
     const patientInfo = document.getElementById('patient-info');
     const errorInfo = document.getElementById('error-info');
+    const patientTable = document.getElementById('patient-table').querySelector('tbody');
 
     FHIR.oauth2.ready()
         .then(client => {
@@ -42,34 +76,31 @@
             console.log("Patient data received:", patient);
             console.log("Observations received:", observations);
 
-            patientInfo.innerHTML = `
-                    <h2>Patient Information</h2>
-                    <p>Name: ${patient.name[0].given.join(' ')} ${patient.name[0].family}</p>
-                    <p>Gender: ${patient.gender}</p>
-                    <p>Birth Date: ${patient.birthDate}</p>
+            const patientData = {
+                name: `${patient.name[0].given.join(' ')} ${patient.name[0].family}`,
+                mrn: patient.identifier[0].value,
+                labs: 'Incomplete', // Placeholder for labs status
+                visitReason: 'N/A', // Placeholder for visit reason
+                recentVisit: 'N/A', // Placeholder for recent visit
+                communication: 'Send Notification' // Placeholder for communication action
+            };
+
+            // Sample data population
+            const samplePatients = Array(12).fill(patientData);
+
+            samplePatients.forEach(p => {
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${p.name}</td>
+                    <td>${p.mrn}</td>
+                    <td>${p.labs}</td>
+                    <td>${p.visitReason}</td>
+                    <td>${p.recentVisit}</td>
+                    <td><span class="notification">${p.communication}</span></td>
                 `;
-
-            const heightData = [];
-            const weightData = [];
-
-            observations.entry.forEach(entry => {
-                const resource = entry.resource;
-                const date = moment(resource.effectiveDateTime);
-                const value = resource.valueQuantity.value;
-                const codings = resource.code.coding;
-
-                const isHeight = codings.some(coding => coding.code === '8302-2');
-                const isWeight = codings.some(coding => coding.code === '29463-7');
-
-                if (isHeight) { // Height
-                    heightData.push({x: date, y: value});
-                } else if (isWeight) { // Weight
-                    weightData.push({x: date, y: value});
-                }
+                patientTable.appendChild(row);
             });
 
-            createHeightChart(heightData);
-            createWeightChart(weightData);
         })
         .catch(error => {
             console.error("Error occurred:", error);
@@ -78,92 +109,6 @@
                 errorInfo.innerHTML += `<pre>${error.stack}</pre>`;
             }
         });
-
-    function createHeightChart(heightData) {
-        const ctx = document.getElementById('heightChart').getContext('2d');
-        new Chart(ctx, {
-            type: 'line',
-            data: {
-                datasets: [{
-                    label: 'Height (cm)',
-                    data: heightData,
-                    borderColor: 'rgb(75, 192, 192)',
-                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                    fill: true
-                }]
-            },
-            options: {
-                responsive: true,
-                plugins: {
-                    title: {
-                        display: true,
-                        text: 'Patient Height Over Time'
-                    }
-                },
-                scales: {
-                    x: {
-                        type: 'time',
-                        time: {
-                            unit: 'month'
-                        },
-                        title: {
-                            display: true,
-                            text: 'Date'
-                        }
-                    },
-                    y: {
-                        title: {
-                            display: true,
-                            text: 'Height (cm)'
-                        }
-                    }
-                }
-            }
-        });
-    }
-
-    function createWeightChart(weightData) {
-        const ctx = document.getElementById('weightChart').getContext('2d');
-        new Chart(ctx, {
-            type: 'line',
-            data: {
-                datasets: [{
-                    label: 'Weight (kg)',
-                    data: weightData,
-                    borderColor: 'rgb(255, 99, 132)',
-                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                    fill: true
-                }]
-            },
-            options: {
-                responsive: true,
-                plugins: {
-                    title: {
-                        display: true,
-                        text: 'Patient Weight Over Time'
-                    }
-                },
-                scales: {
-                    x: {
-                        type: 'time',
-                        time: {
-                            unit: 'month'
-                        },
-                        title: {
-                            display: true,
-                            text: 'Date'
-                        }
-                    },
-                    y: {
-                        title: {
-                            display: true,
-                            text: 'Weight (kg)'
-                        }
-                    }
-                }
-            }
-        });
-    }
 </script>
 </body>
 </html>
