--- a/launch.html
+++ b/launch.html
@@ -10,8 +10,8 @@
 <h1>Launching SMART on FHIR App</h1>
 <script>
   FHIR.oauth2.authorize({
-    clientId: '03bafbdd-74ed-4172-904f-fc5256229713',
-    scope: 'launch patient/Patient.read patient/Observation.read',
+    clientId: '9014a646-9ec7-4cf7-afb7-42338e0182c9',
+    scope: 'launch patient/Patient.read patient/Observation.read patient/Encounter.read patient/Communication.read',
     redirectUri: 'https://SunchuKeerthika.github.io/SmartLiver/index.html',
     iss: 'https://fhir-open.cerner.com/r4/ec2458f2-1e24-41c8-b71b-0e701af7583d',
   });
