--- a/launch.html
+++ b/launch.html
@@ -11,7 +11,7 @@
 <script>
   FHIR.oauth2.authorize({
     clientId: '9014a646-9ec7-4cf7-afb7-42338e0182c9',
-    scope: 'launch patient/Patient.read patient/Observation.read patient/Encounter.read patient/Communication.write',
+    scope: 'launch patient/Patient.read patient/Observation.read patient/Encounter.read patient/Communication.read patient/Communication.write',
     redirectUri: 'https://SunchuKeerthika.github.io/SmartLiver/index.html',
     iss: 'https://fhir-open.cerner.com/r4/ec2458f2-1e24-41c8-b71b-0e701af7583d',
   });
